--- a/src/app/componentes/rodape/rodape.component.html
+++ b/src/app/componentes/rodape/rodape.component.html
@@ -1,7 +1,7 @@
 <div class="rodape">
   <footer class="ff-inter">
     <p>2023 <span>&copy;</span>
-      Desenvolvido por Carlos Antônio. Projeto fictício sem fins comerciais.
+      Desenvolvido por Alura. Projeto fictício sem fins comerciais.
     </p>
   </footer>
 </div>
